--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navbar start here -->
     <header class="container">
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid py-4 mx-4">
+            <div class="container-fluid py-4 ">
                 <a style="font-family: poppins; font-weight: 600;" class="navbar-brand fs-3 pe-5" href="#">Learn Dot</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -53,8 +53,68 @@
                 </div>
             </div>
         </nav>
+        <!-- Navbar end here -->
+
+
+        <!-- Slider Start Here -->
+        <section class="container">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide my-5 bg-dark" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class=" carousel-item active" data-bs-interval="10000">
+                        <img src="images/cover/cover-1.png" class="d-block w-100 opacity-25" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <h5 class="fs-1 text-white">Get Started Digital
+                                Learning</h5>
+                            <p class="text-white">It is a long established fact that a reader will
+                                be
+                                distracted by
+                                the readable <br>
+                                content of a page when looking at its layout.</p>
+                            <button class="btn btn-primary">Get Started</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100 opacity-25" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <h5 class="fs-1 text-white">Get Started Digital
+                                Learning</h5>
+                            <p class="text-white">It is a long established fact that a reader will be distracted by the
+                                readable <br>
+                                content of a page when looking at its layout.</p>
+                            <button class="btn btn-primary">Get Started</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-3.png" class="d-block w-100 opacity-25" alt="...">
+                        <div class="carousel-caption d-md-block">
+                            <h5 class="fs-1 text-white">Get Started Digital
+                                Learning</h5>
+                            <p class="text-white">It is a long established fact that a reader will be distracted by the
+                                readable <br>
+                                content of a page when looking at its layout.</p>
+                            <button class="btn btn-primary">Get Started</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+        <!-- Slider end Here -->
     </header>
-    <!-- Navbar end here -->
+    <main class="container">
+        <section>
+
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
