--- a/index.html
+++ b/index.html
@@ -110,10 +110,149 @@
         </section>
         <!-- Slider end Here -->
     </header>
-    <main class="container">
-        <section>
+    <main>
+        <h2 class="text-center fw-bolder">Discover Our Popular <br>
+            Courses</h2>
+        <p class="text-center fw-normal pb-5">It is a long established fact that a reader will be distracted by the
+            readable
+            <br>
+            content of a page when looking at its layout.
+        </p>
+        <!-- course section start here -->
+        <!-- course section start here -->
+        <div class="container overflow-hidden">
+            <div class="row gy-3">
+                <div class="col-lg-6">
+                    <div id="mobile-res" class="d-flex bg-white border rounded">
+                        <div>
+                            <img src="images/course/course-1.png" alt="">
+                        </div>
+                        <div class="ps-4">
+                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <p class="text-primary">Price : 20$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="d-flex bg-white border rounded">
+                        <div>
+                            <img src="images/course/course-2.png" alt="">
+                        </div>
+                        <div class="ps-4">
+                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <p class="text-primary">Price : 20$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="d-flex bg-white border rounded">
+                        <div>
+                            <img src="images/course/course-3.png" alt="">
+                        </div>
+                        <div class="ps-4">
+                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <p class="text-primary">Price : 20$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="d-flex bg-white border rounded">
+                        <div>
+                            <img src="images/course/course-4.png" alt="">
+                        </div>
+                        <div class="ps-4">
+                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <p class="text-primary">Price : 20$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="d-flex bg-white border rounded">
+                        <div>
+                            <img src="images/course/course-5.png" alt="">
+                        </div>
+                        <div class="ps-4">
+                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <p class="text-primary">Price : 20$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="d-flex bg-white border rounded">
+                        <div>
+                            <img src="images/course/course-6.png" alt="">
+                        </div>
+                        <div class="ps-4">
+                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
+                            <p>Some quick example text to build on the card title
+                                and make up the bulk of the card.</p>
+                            <p class="text-primary">Price : 20$</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="text-center my-5">
+            <bt class="btn btn-primary">See More Courses</bt>
+        </div>
+        <!-- course section end here -->
 
+        <!-- Ready to join? start here -->
+        <section class="container my-5 bg-primary border rounded d-flex align-items-center justify-content-around"
+            style="height:250px;">
+            <div class="">
+                <h4>
+                    Ready to join?
+                </h4>
+                <p>It is a long established fact that a reader will be distracted by the
+                    readable content of a page <br> when looking at its layout.</p>
+            </div>
+            <div>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-light text-primary" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Register
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Ready To Register?</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="input-group">
+                                    <span class="input-group-text bg-primary text-white">First and last name</span>
+                                    <input type="text" aria-label="First name" class="form-control">
+                                    <input type="text" aria-label="Last name" class="form-control">
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">Start</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- Ready to join? end here -->
+
+        <!-- Frequently Asked Question Start here -->
+        <!-- Frequently Asked Question end here -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
