--- a/index.html
+++ b/index.html
@@ -252,6 +252,75 @@
         <!-- Ready to join? end here -->
 
         <!-- Frequently Asked Question Start here -->
+        <section class="container mb-5">
+            <div class="mb-5">
+                <h2 class="text-center">Frequently Asked Questions</h2>
+                <p class="text-center">It is a long established fact that a reader will be <br> distracted by the
+                    readable
+                    content of a page when looking at its layout.
+                </p>
+            </div>
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            What is the difference between Grid FlexBox?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">The basic difference between CSS Grid Layout and CSS Flexbox Layout
+                            is that flexbox was designed for layout in one dimension - either a row or a column. Grid
+                            was designed for two-dimensional layout - rows, and columns at the same time.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Difference between Bootstrap and Tailwind?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Bootstrap comes with a set of pre-styled responsive, mobile-first
+                            components that possess a definite UI kit. Tailwind CSS uses a set of utility classes to
+                            create a neat UI with more flexibility and uniqueness.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            What is CSS BOX-MODEL?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">The CSS box model is essentially a box that wraps around every HTML
+                            element. It consists of: margins, borders, padding, and the actual content. </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            What is HTML Semantic Tags?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Semantic HTML elements are those that clearly describe their meaning
+                            in a human- and machine-readable way. Elements such as header, footer and article are
+                            all considered semantic because they accurately describe the purpose of the
+                            element and the type of content that is inside them</div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Frequently Asked Question end here -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
