trusted company added

--- a/index.html
+++ b/index.html
@@ -322,6 +322,14 @@
             </div>
         </section>
         <!-- Frequently Asked Question end here -->
+
+        <!-- Trusted Company start here -->
+        <section class="container">
+            <div>
+                <h1>Trusted by over 800+ companies</h1>
+            </div>
+        </section>
+        <!-- Trusted Company end here -->
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
