--- a/index.html
+++ b/index.html
@@ -326,7 +326,15 @@
         <!-- Trusted Company start here -->
         <section class="container">
             <div>
-                <h1>Trusted by over 800+ companies</h1>
+                <h1 class="text-center fw-normal">Trusted by over 800+ companies</h1>
+            </div>
+            <div class="d-flex align-items-center justify-content-center my-5">
+                <img style="width: 16vh;" class="mx-5" src="images/company/company-1.png" alt="">
+                <img style="width: 16vh;" class="mx-5" src="images/company/company-2.png" alt="">
+                <img style="width: 16vh;" class="mx-5" src="images/company/company-3.png" alt="">
+                <img style="width: 16vh;" class="mx-5" src="images/company/company-4.png" alt="">
+                <img style="width: 16vh;" class="mx-5" src="images/company/company-5.png" alt="">
+                <img style="width: 16vh;" class="mx-5" src="images/company/company-6.png" alt="">
             </div>
         </section>
         <!-- Trusted Company end here -->
