--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,300&display=swap"
         rel="stylesheet">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/7118aeda78.js" crossorigin="anonymous"></script>
+    <!-- custom css -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -123,7 +127,7 @@
         <div class="container overflow-hidden">
             <div class="row gy-3">
                 <div class="col-lg-6">
-                    <div id="mobile-res" class="d-flex bg-white border rounded">
+                    <div id="mobile" class="d-flex bg-white border rounded">
                         <div>
                             <img src="images/course/course-1.png" alt="">
                         </div>
@@ -324,7 +328,7 @@
         <!-- Frequently Asked Question end here -->
 
         <!-- Trusted Company start here -->
-        <section class="container">
+        <section class="dot-container">
             <div>
                 <h1 class="text-center fw-normal">Trusted by over 800+ companies</h1>
             </div>
@@ -339,6 +343,29 @@
         </section>
         <!-- Trusted Company end here -->
     </main>
+    <footer class="container rounded bg-dark mt-5 d-flex justify-content-center align-items-center"
+        style="height: 300px;">
+        <div class="text-light">
+            <h2 class="text-center">Learn Dot</h2>
+            <p class="text-center">Office 41, Zawaya Buildin, Ghala Muscat <br>
+                Sultanate of Oman</p>
+            <p class="text-center">Privacy Ploicy | Terms of use</p>
+            <div class="text-center">
+                <a class="text-light mx-2" href="https://www.facebook.com/">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a class="text-light mx-2" href="https://twitter.com/">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a class="text-light mx-2" href="https://www.linkedin.com/">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a class="text-light mx-2" href="https://www.snapchat.com/">
+                    <i class="fa-brands fa-snapchat"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
