--- a/index.html
+++ b/index.html
@@ -69,11 +69,9 @@
                         <div class="carousel-caption d-md-block">
                             <h5 class="fs-1 text-white">Get Started Digital
                                 Learning</h5>
-                            <p class="text-white">It is a long established fact that a reader will
-                                be
-                                distracted by
-                                the readable <br>
-                                content of a page when looking at its layout.</p>
+                            <p class="text-white">Complete solution to create and manage your courses and learners.
+                                Start your free trial. <br>
+                                The best elearning platform for your employees training.</p>
                             <button class="btn btn-primary">Get Started</button>
                         </div>
                     </div>
@@ -82,9 +80,9 @@
                         <div class="carousel-caption d-md-block">
                             <h5 class="fs-1 text-white">Get Started Digital
                                 Learning</h5>
-                            <p class="text-white">It is a long established fact that a reader will be distracted by the
-                                readable <br>
-                                content of a page when looking at its layout.</p>
+                            <p class="text-white">Complete solution to create and manage your courses and learners.
+                                Start your free trial. <br>
+                                The best elearning platform for your employees training.</p>
                             <button class="btn btn-primary">Get Started</button>
                         </div>
                     </div>
@@ -93,9 +91,9 @@
                         <div class="carousel-caption d-md-block">
                             <h5 class="fs-1 text-white">Get Started Digital
                                 Learning</h5>
-                            <p class="text-white">It is a long established fact that a reader will be distracted by the
-                                readable <br>
-                                content of a page when looking at its layout.</p>
+                            <p class="text-white">Complete solution to create and manage your courses and learners.
+                                Start your free trial. <br>
+                                The best elearning platform for your employees training.</p>
                             <button class="btn btn-primary">Get Started</button>
                         </div>
                     </div>
@@ -117,10 +115,8 @@
     <main>
         <h2 class="text-center fw-bolder">Discover Our Popular <br>
             Courses</h2>
-        <p class="text-center fw-normal pb-5">It is a long established fact that a reader will be distracted by the
-            readable
-            <br>
-            content of a page when looking at its layout.
+        <p class="text-center fw-normal pb-5">Just a clik away form your dream destination.
+            be your own Boss. <br> Chose below where you have interest.
         </p>
         <!-- course section start here -->
         <!-- course section start here -->
@@ -133,8 +129,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
-                            <p>Some quick example text to build on the card title
-                                and make up the bulk of the card.</p>
+                            <p>UI design and UX design are two of the most..</p>
                             <p class="text-primary">Price : 20$</p>
                         </div>
                     </div>
@@ -145,9 +140,8 @@
                             <img src="images/course/course-2.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
-                            <p>Some quick example text to build on the card title
-                                and make up the bulk of the card.</p>
+                            <h5 class="pt-5">Javascript Basic to advanced</h5>
+                            <p>Master your language with lessons, quizzes, and..</p>
                             <p class="text-primary">Price : 20$</p>
                         </div>
                     </div>
@@ -158,9 +152,9 @@
                             <img src="images/course/course-3.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
-                            <p>Some quick example text to build on the card title
-                                and make up the bulk of the card.</p>
+                            <h5 class="pt-5">Fullstack Web Development</h5>
+                            <p>A full stack web developer is a person who can develop both client and..
+                            </p>
                             <p class="text-primary">Price : 20$</p>
                         </div>
                     </div>
@@ -171,9 +165,9 @@
                             <img src="images/course/course-4.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
-                            <p>Some quick example text to build on the card title
-                                and make up the bulk of the card.</p>
+                            <h5 class="pt-5">Digital Marketing</h5>
+                            <p>Digital marketing..
+                            </p>
                             <p class="text-primary">Price : 20$</p>
                         </div>
                     </div>
@@ -184,9 +178,9 @@
                             <img src="images/course/course-5.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
-                            <p>Some quick example text to build on the card title
-                                and make up the bulk of the card.</p>
+                            <h5 class="pt-5">Photography Basic Rules</h5>
+                            <p>What are the golden rules of photography?
+                                ..</p>
                             <p class="text-primary">Price : 20$</p>
                         </div>
                     </div>
@@ -197,9 +191,9 @@
                             <img src="images/course/course-6.png" alt="">
                         </div>
                         <div class="ps-4">
-                            <h5 class="pt-5">Fundamental Of UI/UX Design</h5>
-                            <p>Some quick example text to build on the card title
-                                and make up the bulk of the card.</p>
+                            <h5 class="pt-5">Motion Graphics</h5>
+                            <p>Motion graphics (sometimes mograph) are pieces of animation or digital footage which..
+                            </p>
                             <p class="text-primary">Price : 20$</p>
                         </div>
                     </div>
@@ -218,8 +212,7 @@
                 <h4>
                     Ready to join?
                 </h4>
-                <p>It is a long established fact that a reader will be distracted by the
-                    readable content of a page <br> when looking at its layout.</p>
+                <p>Join Today our enormous group and yourself in a remarkable place</p>
             </div>
             <div>
                 <!-- Button trigger modal -->
