--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <h4>
                     Ready to join?
                 </h4>
-                <p>Join Today our enormous group and yourself in a remarkable place</p>
+                <p>Join Today our enormous group and find yourself in a remarkable place</p>
             </div>
             <div>
                 <!-- Button trigger modal -->
@@ -344,16 +344,16 @@
                 Sultanate of Oman</p>
             <p class="text-center">Privacy Ploicy | Terms of use</p>
             <div class="text-center">
-                <a class="text-light mx-2" href="https://www.facebook.com/">
+                <a class="text-light mx-2" target="_blank" href="https://www.facebook.com/">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
-                <a class="text-light mx-2" href="https://twitter.com/">
+                <a class="text-light mx-2" target="_blank" href="https://twitter.com/">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
-                <a class="text-light mx-2" href="https://www.linkedin.com/">
+                <a class="text-light mx-2" target="_blank" href="https://www.linkedin.com/">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <a class="text-light mx-2" href="https://www.snapchat.com/">
+                <a class="text-light mx-2" target="_blank" href="https://www.snapchat.com/">
                     <i class="fa-brands fa-snapchat"></i>
                 </a>
             </div>
